# energy

./: .env.sample  Dockerfile.prod  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/api/: api.Dockerfile  pyproject.toml
app/api/dependencies/: auth.py  channel.py  installation.py  measurements.py  meter.py  token.py  user.py
app/api/helpers/: auth.py  installation.py  measurement.py  meter.py
app/api/v1/: channel.py  installation.py  measurements.py  meter.py  task.py  user.py
app/core/: error.py  settings.py
app/core/certificates/: kieback-peter.net_2024.key  kieback-peter.net_2024.pem
app/core/docs/c4/: workspace.dsl
app/core/implementations/: base_crud.py  base_model.py
app/database/: session.py
app/database/crud/: base_crud.py  channel.py  installation.py  measurement.py  meter.py  user.py
app/database/migrations/: env.py
app/database/migrations/versions/: 07ed58de9ddb_cascade_relations.py
app/database/models/: base.py  base_model.py  channel.py  installation.py  measurement.py  meter.py  user.py
app/energy/: energy.Dockerfile  provider.py  pyproject.toml  tasks.py  worker.py
app/energy/adapters/: adapter.py  base_adapter.py  energiemissie.py  fudura.py  joulz.py  kenter.py  tums.py
app/energy/providers/: base_provider.py  energiemissie.py
app/energy/tasks/: fetch.py
app/schemas/: base_schema.py  channel.py  installation.py  measurements.py  meter.py  token.py  user.py
app/tests/: config_test.py  test_database.py  test_energyprovider.py  test_user.py
